 * Graphics:
   * New animated water.
   * New standing animation for the Dwarvish Runesmith
   * New generic portraits for the Troll and Troll Whelp
 * Language and i18n:
   * Updated translations: French, Galician, Latvian
 * Lua API:
   * Added support for unit.level field (read only)
   * Added wesnoth.set_dialog_focus function
 * Music and sound effects:
   * New dwarf hit and die sounds.
 * User interface:
   * GUI2:
     * stacked_widget can optionally display a single layer at a time. This
       may be used to implement dialogs with multiple pages or tabs.
     * Widgets which are children of invisible or hidden parents can no longer
       be interacted with even if the children themselves are still internally
       visible.
   * Added a version dialog button to the title screen, replacing the Paths
     option previously found in Preferences -> General.
 * WML engine:
   * Added support for mod_x,mod_y= in [terrain_graphics].
   * Added support for has_flag= in terrain graphics [variant].
   * Added category= to [label] - allows grouping labels so that players can
     show/hide them
   * Add female_text= to [animate_unit] and [unstore_unit] for easier translating
   * The WML preprocessor now writes warnings to stderr for macros redefined
     without #undef, to help detect unintentional name clashes.
   * Fix macro definition line numbers being offset by 1 in WML preprocessor
     messages involving macros.
   * Added WML menu item and event handler views to the Gamestate Inspector
     dialog.
   * Added new possibilities for [effect]:
     * apply_to=alignment - change a unit's alignment
     * apply_to=attacks_left - change a unit's attacks per turn
     * apply_to=recall_cost - change a unit's recall cost
     * apply_to=vision, apply_to=jamming - change a unit's vision/jamming points
     * apply_to=new_advancement - add new advancement possibilities (either units
       or AMLAs)