@@ -29,6 +29,7 @@ int intf_set_dialog_markup(lua_State *L);
 int intf_set_dialog_canvas(lua_State *L);
 int intf_set_dialog_focus(lua_State *L);
 int intf_set_dialog_active(lua_State *L);
+int intf_set_dialog_visible(lua_State *L);
 int intf_add_dialog_tree_node(lua_State *L);
 int show_dialog(lua_State *L, CVideo & video);
 int show_lua_console(lua_State*L, CVideo & video, lua_kernel_base * lk);
