@@ -24,6 +24,7 @@ Version 1.13.1+dev:
  * Lua API:
    * Added support for unit.level field (read only)
    * Added wesnoth.set_dialog_focus function
+   * Added wesnoth.set_dialog_visible function
  * Music and sound effects:
    * New dwarf hit and die sounds.
  * User interface:
